more nginx updates

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,5 @@ export AWS_SECRET_ACCESS_KEY="asecretkey"
 export AWS_REGION="us-west-2"
 export TF_VAR_ami="ami-eba"
 export TF_VAR_security_group_ids='["sg-eba"]'
+export TF_VAR_domain_name="mydomain.com"
+export TF_VAR_eip="eipalloc-xxxxx" # optional to use elastic ip
