--- a/ansible/roles/web_servers/files/docker-compose.app.yml
+++ b/ansible/roles/web_servers/files/docker-compose.app.yml
@@ -35,14 +35,15 @@ services:
   nginx:
     image: "nginx:latest"
     restart: always
-    depends_on:
-      - certbot
+    environment:
+      - APP_SERVER_NAME=${APP_SERVER_NAME}
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./conf.d/:/etc/nginx/conf.d:rw
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d:rw
+      - ./nginx/templates:/etc/nginx/templates:rw
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
     networks:
