--- a/ansible/roles/web_servers/files/nginx/templates/db.conf.ssl.template
+++ b/ansible/roles/web_servers/files/nginx/templates/db.conf.ssl.template
@@ -1,14 +1,12 @@
+
 server {
 
-  listen 80;
-  listen [::]:80;
-  # server_name db.damilola.chickenkiller.com;
-  server_name db.damilola.jumpingcrab.com;
+  listen 443 ssl;
+  listen [::]:443 ssl;
+  server_name db.$APP_SERVER_NAME;
 
-  location /.well-known/acme-challenge/ {
-    root /var/www/certbot;
-  }
-
+  ssl_certificate /etc/letsencrypt/live/$APP_SERVER_NAME/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/$APP_SERVER_NAME/privkey.pem;
 
   location / {
     
