--- a/ansible/roles/web_servers/files/nginx/templates/db.conf.template
+++ b/ansible/roles/web_servers/files/nginx/templates/db.conf.template
@@ -1,13 +1,13 @@
 
 server {
 
-  listen 443 ssl;
-  listen [::]:443 ssl;
-  # server_name db.damilola.chickenkiller.com;
-  server_name db.damilola.jumpingcrab.com;
+  listen 80;
+  listen [::]:80;
+  server_name db.$APP_SERVER_NAME;
 
-  ssl_certificate /etc/letsencrypt/live/damilola.jumpingcrab.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/damilola.jumpingcrab.com/privkey.pem;
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
 
 
   location / {
